--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
               </div>
               <div class="intro--options">
                 <a href="#0">
-                  <h3>Metiew &amp; Smith</h3>
+                  <h3>Drone Guidance</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
                 </a>
                 <a href="#0">
-                  <h3>Fantasy interactive</h3>
+                  <h3>RC Submarine</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
                 </a>
                 <a href="#0">
-                  <h3>Paul &amp; shark</h3>
+                  <h3>Social Network Scraper</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
                 </a>
               </div>
@@ -82,7 +82,7 @@
                       <div class="slider--item-image">
                         <img src="assets/img/work-victory.jpg" alt="Victory">
                       </div>
-                      <p class="slider--item-title">Victory</p>
+                      <p class="slider--item-title">Social Network Scraper</p>
                       <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
                     </a>
                   </li>
@@ -91,7 +91,7 @@
                       <div class="slider--item-image">
                         <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
                       </div>
-                      <p class="slider--item-title">Metiew &amp; Smith</p>
+                      <p class="slider--item-title">Guidance Drone</p>
                       <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
                     </a>
                   </li>
@@ -100,7 +100,7 @@
                       <div class="slider--item-image">
                         <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
                       </div>
-                      <p class="slider--item-title">Alex Nowak</p>
+                      <p class="slider--item-title">RC Submarine</p>
                       <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
                     </a>
                   </li>
@@ -128,7 +128,7 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>We<br>believe in<br>passionate<br>people</h2>
+                <h2>Universität Zurich<br> Cyber Security<br>Robotics</h2>
                 <a href="google.com">Career
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
@@ -158,13 +158,13 @@
               <div class="contact--lockup">
                 <div class="modal">
                   <div class="modal--information">
-                    <p>Pawia 5, 31-154 Kraków, Poland</p>
-                    <a href="mailto:mattlitheodor@gmail.com">ouremail@gmail.com</a>
+                    <p>Zürich, Switzerland</p>
+                    <a href="mailto:mattlitheodor@gmail.com">theodormattli@gmail.com</a>
                     <a href="tel:+randomnumber">+48 12 628 75 60</a>
                   </div>
                   <ul class="modal--options">
-                    <li><a href="#0">mail</a></li>
-                    <li><a href="#0">instagram</a></li>
+                    <li><a href="#0">FACEBOOK</a></li>
+                    <li><a href="#0">INSTAGRAM</a></li>
                     <li><a href="mailto:ouremail@gmail.com">Contact</a></li>
                   </ul>
                 </div>
