--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   </svg>
                   <span class="btn-background"></span>
                 </button>
-                <img src="assets/img/introduction-visual.png" alt="Welcome">
+                <img src="assets/img/introduction-visual.png" style="opacity:0.7" alt="Welcome">
               </div>
               <div class="intro--options">
                 <a href="#0">
